--- a/src/app/components/private/retraite/reclam-retraite/rep-traite-reclam/rep-traite-reclam.component.html
+++ b/src/app/components/private/retraite/reclam-retraite/rep-traite-reclam/rep-traite-reclam.component.html
@@ -35,11 +35,10 @@
                             <div class="card-body">
                                 <!-- ICIIIIIIIII -->
                                 <h1>Objet : </h1>
-                                <h3>[ Réponse - Réclamation billets non trouvés ]</h3>
+                                <h3>[ Réponse - {{reclam.object}} ]</h3>
                                 <h1>Réponse :</h1>
                                 <h3>
-                                    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-                                    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                                   {{reclam.contenu_admin}}
                                 </h3>
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                     <button type="button" class="b1 btn btn-outline-danger"
