--- a/src/app/components/private/retraite/reservation/dashboard/dashboard.component.html
+++ b/src/app/components/private/retraite/reservation/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
                             <!-- Card Body -->
                             <div class="card-body">
                                 <!-- ICIIIIIIIII -->
-                                <app-moteur></app-moteur>
+                                <app-moteur1></app-moteur1>
                             </div>
                         </div>
                     </div>
