--- a/src/app/components/private/admin/gestion-reclam/liste-reclam/liste-reclam.component.html
+++ b/src/app/components/private/admin/gestion-reclam/liste-reclam/liste-reclam.component.html
@@ -29,7 +29,8 @@
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h3 class="m-0 font-weight-bold text-primary l1">Réclamations traitées</h3>
-                                
+                                <i class="fas fa-search fa-sm i1"></i>
+                                <input type="text" id="recherche" (input)="recherche($event.target.value)">
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
@@ -55,7 +56,7 @@
                                             {{reclam.create_at}}
                                         </td>
                                         <td>
-                                            <button class="btn btn-info btn-sm b1" (click)="getreclalmId(reclam.id)" routerLink="/admin/reponse-reclam">
+                                            <button class="btn btn-info btn-sm b1" (click)="getreclalmId(reclam.id)" routerLink="/admin/contenu-reclam">
                                                 <i class="fas fa-eye"></i>
                                             </button>
 
