--- a/src/app/components/private/admin/gestion-reclam/reponse-reclam/reponse-reclam.component.scss
+++ b/src/app/components/private/admin/gestion-reclam/reponse-reclam/reponse-reclam.component.scss
@@ -1,3 +1,9 @@
 .lab1{
-    margin-top: 5%;
+    margin-top: 3%;
+    color: gray;
+    
     }
+.btnn{
+    margin-top: 2%;
+    margin-left: 58%;
+}
