--- a/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
+++ b/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
@@ -1,28 +1,33 @@
+
 <!-- Card -->
 <div class="container mt-5">
-    <ul class="list-group">
-        <li *ngFor="let article of Articles" class="list-group-item ">
-            <div class="card p-3">
-                <div class="row ">
-                    <div class="col-md-12 right">
+    <div class="list-group">
+        <a  class="list-group-item list-group-item-action flex-column align-items-start">
+            <div *ngFor="let article of Articles">
+                <div class="card p-3">
+                    <div class="row">
+                        <div class="col-md-12 right">
 
-                        <img src= "https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
-                            alt="">
-                        <div class="text">
-                            <h1> {{ article.titre }} </h1>
-                            <p>
-                                {{ article.description }}
-                            </p>
+                            <img src="https://www.ilboursa.com/handlers/image_news_get.ashx?id=73427493-E994-4D77-9BE6-96763325388E"
+                                alt="">
+                            <div class="text">
+                                <h1> {{ article.titre }} </h1>
+                                <p>
+                                    {{ article.description }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row bb">
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <button (click)="LirePlus(article.id)" type="button" class="b1 btn btn-outline-danger">Lire plus</button>
                         </div>
                     </div>
                 </div>
-                <div class="row bb">
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <button class="b1 btn btn-outline-danger" (click)="voirplus(article.id)" >Lire plus</button>
-                    </div>
-                </div>
             </div>
-        </li>
-      </ul>
+        </a>
+
+    </div>
+
 
 </div>
